# game-small-mission_impoosible

./: .gitignore  README.md  mk_compile_commands.py
assets/actions/: test.act
assets/actions/game_scene/: show_item.act  show_tile.act
assets/actions/main_scene/: show.act
assets/bitmap_fonts/: noto_sans.en.bold.15.bmf  noto_sans.en.bold.25.bmf  noto_sans.en.bold.35.bmf  noto_sans.en.bold.45.bmf  noto_sans.kr.bold.35.bmf  noto_sans.kr.bold.45.bmf
assets/gpu_tasks/game/: batch.gtd  opaque.gtd  post_process.gtd  runner.gtr  to_swapchain.gtd  transparent.gtd
assets/gpu_tasks/game/common/: global_data.sdb  obj_buff.sdb  render.dbl  render_vertex_def.sdb
assets/meshes/: square.msh
assets/objects/char.main/: playable.obj.fsm
assets/objects/npc.rollroll/: rollroll.fsm
assets/objects/poop/: disappear.spr
assets/plugins/child_selector/: select_child.fnc
assets/plugins/cooldown/: cooldown.cpp  cooldown.h  cooldown_manager.cpp  cooldown_manager.h  cooldown_manager.nlf
assets/plugins/relh/: relh.pair.mac
assets/scenes/: game.scn  game.scn.fnc  game.scn.fsm  game.scn.state.fnc  main.scn
assets/scripts/: my_project.cpp  my_project.h
assets/scripts/common/: rank_item.h
assets/scripts/game/: game_state.cpp  game_state.h
assets/scripts/gpu_task/: game_runner.cpp  game_runner.h
assets/shaders/game/: batch.comp  opaque.bind.glsl  opaque.frag  opaque.vert  to_swapchain.frag  to_swapchain.vert  transparent.frag
assets/shaders/game/common/: global_data.glsl  object_data.glsl
assets/system/: settings.app
assets/system/debug_draw/: debug_draw.scn  debug_draw_gtr.cpp  debug_draw_gtr.h  debug_draw_scene.cpp  debug_draw_scene.h
assets/system/debug_draw/shader/: debug_draw.frag  debug_draw.vert
assets/system/macroes/: color.from_code.mac  color.from_rgba_bytes.mac  compare.eq.mac  compare.gt.mac  compare.gte.mac  compare.lt.mac  compare.lte.mac  compare.neq.mac  condition.if.mac  condition.switch.mac  convert.to_int.mac  convert.to_real.mac  convert.to_string.mac  game_component.get_children_names.mac  game_component.get_color.mac  game_component.get_data.mac  game_component.get_name.mac  game_component.get_position.mac  game_component.get_rotation.mac  game_component.get_scale.mac  game_component.is_drawable.mac  game_component.make_path.mac  global.get_data.mac  global.has_data.mac  link.make.mac  map.get.mac  map.key_by_idx.mac  map.keys.mac  map.merge.mac  map.size.mac  math.abs.mac  math.acos.mac  math.asin.mac  math.atan.mac  math.ceil.mac  math.cos.mac  math.degree_to_radian.mac  math.exp.mac  math.floor.mac  math.log.mac  (+51 more)
assets/system/meshes/: bitmap_font_view_square.msh  image_view_square.msh
assets/system/node_loader_format/: app_info.nlf
assets/system/node_loader_format/actions/: activate.nlf  alpha_by.nlf  alpha_to.nlf  call_func.nlf  color_by.nlf  color_to.nlf  deactivate.nlf  empty.nlf  end_action.nlf  enqueue_action.nlf  log.nlf  move_by.nlf  move_to.nlf  move_x_by.nlf  move_x_to.nlf  move_y_by.nlf  move_y_to.nlf  move_z_by.nlf  move_z_to.nlf  parallel.nlf  pause.nlf  play_sound.nlf  play_sprite.nlf  register_body.nlf  register_hierarchy_bodies.nlf  repeat.nlf  resume.nlf  rotate_by.nlf  rotate_to.nlf  scale_by.nlf  scale_to.nlf  scale_x_by.nlf  scale_x_to.nlf  scale_y_by.nlf  scale_y_to.nlf  scale_z_by.nlf  scale_z_to.nlf  script.nlf  send_message.nlf  sequence.nlf  (+11 more)
assets/system/node_loader_format/bone_animation/: bone_animation.nlf  bone_key_frame_info.nlf  frame_event.nlf  pos_key_frame.nlf  rot_key_frame.nlf  scl_key_frame.nlf
assets/system/node_loader_format/bullet_physics/: bullet_body.nlf  bullet_physics.nlf
assets/system/node_loader_format/common/: color.nlf  lrtb_real.nlf  lrtb_uint.nlf  matrix.nlf  quaternion.nlf  rectangle_real.nlf  rectangle_uint.nlf  resolution.nlf  vector2.nlf  vector3.nlf
assets/system/node_loader_format/etc/: bitmap_font_info.nlf  game_base_axis.nlf  global_object.nlf  platform_setting.nlf  resource_holder.nlf  sampler.nlf
assets/system/node_loader_format/fsm/: finite_state_machine.nlf  fsm_state.nlf
assets/system/node_loader_format/game_component/: audio_listener.nlf  camera.nlf  (+4 more)
assets/system/scripts/: init_script.cpp  init_script.h
auto_generated/: auto_generated.cpp  auto_generated.h
auto_generated_main/: auto_generated_main.cpp
funtree_generated/code_gen/: 100.1.code  100.2.code  100.cpp  101.1.code  101.2.code  101.3.code  101.4.code  101.cpp  101.h  102.0.code  102.1.code  102.2.code  102.3.code  102.4.code  102.cpp  102.h  103.0.code  103.1.code  103.2.code  103.3.code  103.cpp  103.h  104.1.code  104.2.code  104.cpp  105.0.code  105.1.code  105.cpp  106.0.code  106.1.code  106.cpp  107.1.code  107.2.code  107.cpp  108.1.code  108.2.code  108.cpp  108.h  109.0.code  109.1.code  (+2414 more)
funtree_generated/ftnlo_gen/: 136.cpp  137.0.code  137.cpp  137.h  138.0.code  138.cpp  138.h  139.cpp  139.h  140.0.code  140.cpp  140.h  141.0.code  141.cpp  141.h  142.0.code  142.cpp  142.h  143.cpp  143.h  144.cpp  144.h  145.0.code  145.cpp  145.h  146.cpp  146.h  147.cpp  148.cpp  148.h  152.cpp  153.cpp  154.0.code  154.cpp  154.h  155.cpp  155.h  156.0.code  156.cpp  156.h  (+457 more)
funtree_generated/lambda_gen/: 290.0.code  290.cpp  290.h
funtree_generated/macro_gen/: 100.0.code  100.cpp  101.0.code  101.cpp  101.h  102.cpp  102.h  103.cpp  103.h  104.0.code  104.cpp  105.cpp  106.cpp  107.0.code  107.cpp  107.h  108.0.code  108.cpp  108.h  109.cpp  110.cpp  111.cpp  111.h  112.cpp  113.0.code  113.cpp  113.h  114.0.code  114.cpp  114.h  115.0.code  115.cpp  115.h  116.0.code  116.cpp  117.cpp  118.cpp  118.h  119.cpp  119.h  (+272 more)
main_ext/: main_ext.cpp  main_ext.h
mesons/debug/: meson.build  setup.ps1  setup.sh
mesons/debug/subprojects/funtree_generated/: meson.build
mesons/emscripten/: emscripten-cross.txt  meson.build  setup.sh
mesons/release/: meson.build  setup.ps1  setup.sh
mesons/steam/: meson.build  setup.sh
mesons/steam_deck/: meson.build  setup.sh
optional/funtree_generated_link/: linker.cpp
optional/funtree_generated_plugin/: plugin.cpp
shells/: act.shell  bfv.shell  obj.shell
(+71 files in other folders)
